[tool.poetry]
name = "nvddata"
version = "0.1.0"
description = "Manage NIST NVD batch data files."
authors = ["Raymond GA Côté <rgacote@AppropriateSolutions.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
